portpage/static/css/index.css
/* color reference
pink #e0acd5
periwinkle #3993dd
ice #97f9f9
lavender #a4def9
shirt #c1e0f7
*/

/* Place the navbar at the bottom of the page, and make it stick */
.navbar {
    background-color: #c1e0f7;
    overflow: hidden;
    position: fixed;
    bottom: 0;
    width: 100%;
}

/* Style the links inside the navigation bar */
.navbar a {
    float: left;
    display: block;
    color: Black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

/* Change the color of links on hover */
.navbar a:hover {
    background-color: #3993dd;
    color: black;
}

/* Add a color to the active/current link */
.navbar a.active {
    background-color: #3993dd;
    color: white;
}
.header{
  text-align: center;
  padding-top: 260px;
  color: #3993dd;
  background-color: #c1e0f7;
  width: 100%;
  height: 800px;
}
.header h1 {
  font-size: 60px;
}
.intro{
  margin-top: 20px;
  font-size: 20px;
}
.icons a:hover{
  color: #e0acd5;
  text-decoration: none;
  display: inline;
}
.icon{
  display: inline;
  margin: auto;
  padding: 50px;
  padding-right: 75px;
}
#myCarousel{
  width: 800px;
  height: auto;
  margin: auto;
}
.content{
  background-color: #e0acd5;
  width: 100%;
  padding-bottom: 20px;
  text-align: center;
  color: #3993dd;
  padding-top: 20px;
  height: 1500px;
}
.content h1 {
  font-size: 50px;
}
.project{
  /*background-color: #a4def9;*/
  width: 90%;
  margin: 5%;
  height: 520px;
}
.project_desc{
  margin-top: 20px;
}
.project p {
  font-weight: bold;
}
.contact {
  padding-top: 20px;
  background-color: #97f9f9;
  height: 600px;
}
.contact-block{
  display: inline-block;
  margin: 20px;
}
.mailform{
  background-color: #a4def9;
  display: block;
  width: 400px;
  margin: auto;
  border-radius: 10px;
  padding: 10px;
}

